--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <div id="top" class="jumbotron text-center">
     <div class="row">
       <div class="col-sm-4">
-        <img src="AEfinal_1.png">
+        <img src="AEfinal_1.svg">
       </div>
       <div class="col-sm-8">
         <h1>Aus<span style="color:#c60c0c">Experts</span> Subsurface Consulting</h1>
